force-app/main/default/objects/Lead/fields/VASS_Country3Code__c.field-meta.xml
<CustomField>
    <fullName>VASS_Country3Code__c</fullName>
    <formula>VASS_Country__r.VASS_Alpha3Code__c</formula>
    <label>Country 3 Code</label>
    <type>Text</type>
</CustomField>