force-app/main/default/objects/Lead/fields/VASS_Country__c.field-meta.xml
<CustomField>
    <fullName>VASS_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field with Country</description>
    <label>Country</label>
    <referenceTo>VASS_Country__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>