force-app/main/default/objects/Lead/fields/VASS_OwnerSince__c.field-meta.xml
<CustomField>
    <fullName>VASS_OwnerSince__c</fullName>
    <description>Stores the timestamp of the most recent owner assignment. This field is automatically updated whenever the Lead ownership changes, and it helps track how long the current owner has held the record.</description>
    <label>Owner Since</label>
    <length>80</length>
    <type>Text</type>
</CustomField>