force-app/main/default/objects/Lead/fields/VASS_Region__c.field-meta.xml
<CustomField>
    <fullName>VASS_Region__c</fullName>
    <formula>VASS_Country__r.VASS_Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>